ユーザーの詳細画面編集 + rootパス追加 + 全体のナビを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,24 @@
 
   <body>
     <div class="container">
+      <% if user_signed_in? %>
+        <li class="nav-item active navbar-brand">
+          <%= link_to '本一覧', books_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item active navbar-brand">
+          <%= link_to 'マイページ',user_path(current_user), class: 'nav-link fw-bold' %>
+        </li>
+        <li class="nav-item active navbar-brand">
+          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+        </li>
+      <% else %>
+        <li class="nav-item active">
+          <%= link_to "新規登録", new_user_registration_path, class: 'nav-link navbar-brand fw-bold'  %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "ログイン", new_user_session_path, class: 'nav-link navbar-brand fw-bold' %>
+        </li>
+      <% end %>
       <%= yield %>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
