--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>ユーザー詳細</h1>
+
+<p>
+  <strong>氏名:</strong>
+  <%= @user.name %>
+</p>
+
+<p>
+  <strong>自己紹介文:</strong>
+  <%= @user.introduction %>
+</p>
+
+<p>
+  <strong>Eメール:</strong>
+  <%= @user.email %>
+</p>
+
+<% if current_user == @user %>
+  <%= link_to '編集', edit_user_registration_path %> |
+<% end %>
+<%= link_to '戻る', users_path %>
