deviceがパラメーターを受け取れるように変更 + usersのedit&showの修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,31 @@
   <%= @user.email %>
 </p>
 
+<p>
+  <strong>郵便番号:</strong>
+  <%= @user.zip_code %>
+</p>
+
+<p>
+  <strong>都道府県:</strong>
+  <%= @user.prefecture_code %>
+</p>
+
+<p>
+  <strong>市町村:</strong>
+  <%= @user.city %>
+</p>
+
+<p>
+  <strong>番地:</strong>
+  <%= @user.street %>
+</p>
+
+<p>
+  <strong>建物名:</strong>
+  <%= @user.other_address %>
+</p>
+
 <% if current_user == @user %>
   <%= link_to '編集', edit_user_registration_path %> |
 <% end %>
