--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
           <%= link_to '本一覧', books_path, class: 'nav-link' %>
         </li>
         <li class="nav-item active navbar-brand">
+          <%= link_to 'ユーザー一覧', users_path, class: 'nav-link' %>
+        </li>
+        <li class="nav-item active navbar-brand">
           <%= link_to 'マイページ',user_path(current_user), class: 'nav-link fw-bold' %>
         </li>
         <li class="nav-item active navbar-brand">
