--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,23 +13,23 @@
     <div class="container">
       <% if user_signed_in? %>
         <li class="nav-item active navbar-brand">
-          <%= link_to '本一覧', books_path, class: 'nav-link' %>
+          <%= link_to t('views.layouts.books.index'), books_path, class: 'nav-link' %>
         </li>
         <li class="nav-item active navbar-brand">
-          <%= link_to 'ユーザー一覧', users_path, class: 'nav-link' %>
+          <%= link_to t('views.layouts.users.index'), users_path, class: 'nav-link' %>
         </li>
         <li class="nav-item active navbar-brand">
-          <%= link_to 'マイページ',user_path(current_user), class: 'nav-link fw-bold' %>
+          <%= link_to t('views.layouts.users.show'),user_path(current_user), class: 'nav-link fw-bold' %>
         </li>
         <li class="nav-item active navbar-brand">
-          <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          <%= link_to t('devise.shared.links.sign_out'), destroy_user_session_path, method: :delete, class: 'nav-link' %>
         </li>
       <% else %>
         <li class="nav-item active">
-          <%= link_to "新規登録", new_user_registration_path, class: 'nav-link navbar-brand fw-bold' %>
+          <%= link_to t('devise.shared.links.sign_up'), new_user_registration_path, class: 'nav-link navbar-brand fw-bold' %>
         </li>
         <li class="nav-item active">
-          <%= link_to "ログイン", new_user_session_path, class: 'nav-link navbar-brand fw-bold' %>
+          <%= link_to t('devise.shared.links.sign_in'), new_user_session_path, class: 'nav-link navbar-brand fw-bold' %>
         </li>
       <% end %>
       <%= yield %>
