--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,9 +3,9 @@
 <table class="table">
   <thead>
   <tr>
-    <th scope="col">名前</th>
-    <th scope="col">自己紹介</th>
-    <th scope="col">Eメール</th>
+    <th scope="col"><%= t('activerecord.attributes.user.name') %></th>
+    <th scope="col"><%= t('activerecord.attributes.user.introduction') %></th>
+    <th scope="col"><%= t('activerecord.attributes.user.email') %></th>
     <th scope="col"></th>
   </tr>
   </thead>
@@ -16,7 +16,7 @@
       <td><%= user.name %></td>
       <td><%= user.introduction %></td>
       <td><%= user.email %></td>
-      <td><%= link_to '詳細', user %></td>
+      <td><%= link_to t('views.common.show'), user %></td>
     </tr>
   <% end %>
   </tbody>
