indexとeditにも画像が表示されるようにする + 画像がない場合はエラーが出ないようにする

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong><%= User.human_attribute_name(:self_introduction) %>:</strong>
-  <%= image_tag @user.avatar %>
+  <%= image_tag @user.avatar if @user.avatar.present? %>
 </p>
 
 <% if current_user == @user %>
