view + model の画像アップロードに対するバリデーション + リサイズ + i18nの翻訳を追加 + active_storage_validationsのgemを導入

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -34,8 +34,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :avatar %><br />
-    <%= f.file_field :avatar %>
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar, accept: '.jpg, .gif, .png' %>
   </div>
 
   <div class="actions">
