--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,10 +25,8 @@
   <%= @user.self_introduction %>
 </p>
 
-<p>
-  <strong><%= User.human_attribute_name(:self_introduction) %>:</strong>
-  <%= image_tag @user.avatar if @user.avatar.present? %>
-</p>
+<strong><%= User.human_attribute_name(:avatar) %></strong>
+<p><%= image_tag @user.avatar.variant(resize_to_limit: [100, 100]) if @user.avatar.attached? %></p>
 
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
