rubocopとerblintの指摘を反映 + 画像アップロードをパーシャルに移す

--- a/app/views/devise/registrations/_profile_fields.html.erb
+++ b/app/views/devise/registrations/_profile_fields.html.erb
@@ -4,6 +4,11 @@
 </div>
 
 <div class="field">
+  <%= f.label :avatar %>
+  <%= f.file_field :avatar, accept: '.jpg, .gif, .png' %>
+</div>
+
+<div class="field">
   <%= f.label :postal_code %>
   <%= f.text_field :postal_code %>
 </div>
