--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,6 +33,10 @@
   <% end %>
 </p>
 
+<%= render 'follow_form', user: @user %>
+
+<%= render 'follow_detail', user: @user %>
+
 <% if current_user == @user %>
   <%= link_to t('views.common.edit'), edit_user_registration_path %> |
 <% end %>
