フォロー&アンフォローする際の_follow_form.html.erbの作成 + それに伴う修正

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,7 @@
   <% end %>
 </p>
 
-<%= render 'follow_form', user: @user %>
+<%= render 'follow_form', {user: @user, following_user: @following_user} %>
 
 <%= render 'follow_detail', user: @user %>
 
