--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,17 +5,17 @@
 
   <div class="field">
     <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    <%= f.text_field :name, autocomplete: "name" %>
   </div>
 
   <div class="field">
     <%= f.label :introduction %><br />
-    <%= f.text_area :introduction, autofocus: true, autocomplete: "introduction" %>
+    <%= f.text_area :introduction, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -43,27 +43,27 @@
 
   <div class="field">
     <%= f.label :zip_code %><br />
-    <%= f.text_field :zip_code, autofocus: true, autocomplete: "zip_code" %>
+    <%= f.text_field :zip_code, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
     <%= f.label :prefecture_code %><br />
-    <%= f.text_field :prefecture_code, autofocus: true, autocomplete: "prefecture_code" %>
+    <%= f.text_field :prefecture_code, autocomplete: "address-level1" %>
   </div>
 
   <div class="field">
     <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true, autocomplete: "city" %>
+    <%= f.text_field :city, autocomplete: "address-level2" %>
   </div>
 
   <div class="field">
     <%= f.label :street %><br />
-    <%= f.text_field :street, autofocus: true, autocomplete: "street" %>
+    <%= f.text_field :street, autocomplete: "address-level3" %>
   </div>
 
   <div class="field">
     <%= f.label :other_address %><br />
-    <%= f.text_field :other_address, autofocus: true, autocomplete: "other_address" %>
+    <%= f.text_field :other_address, autocomplete: "address-level4" %>
   </div>
 
   <div class="actions">
