--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,12 +10,12 @@
 
   <div class="field">
     <%= f.label :introduction %><br />
-    <%= f.text_area :introduction, autofocus: true, autocomplete: "introduction" %>
+    <%= f.text_area :introduction %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autocomplete: "email" %>
   </div>
 
   <div class="field">
@@ -33,27 +33,27 @@
 
   <div class="field">
     <%= f.label :zip_code %><br />
-    <%= f.text_field :zip_code, autofocus: true, autocomplete: "zip_code" %>
+    <%= f.text_field :zip_code, autocomplete: "postal-code" %>
   </div>
 
   <div class="field">
     <%= f.label :prefecture_code %><br />
-    <%= f.text_field :prefecture_code, autofocus: true, autocomplete: "prefecture_code" %>
+    <%= f.text_field :prefecture_code, autocomplete: "address-level1" %>
   </div>
 
   <div class="field">
     <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true, autocomplete: "city" %>
+    <%= f.text_field :city, autocomplete: "address-level2" %>
   </div>
 
   <div class="field">
     <%= f.label :street %><br />
-    <%= f.text_field :street, autofocus: true, autocomplete: "street" %>
+    <%= f.text_field :street, autocomplete: "address-level3" %>
   </div>
 
   <div class="field">
     <%= f.label :other_address %><br />
-    <%= f.text_field :other_address, autofocus: true, autocomplete: "other_address" %>
+    <%= f.text_field :other_address, autocomplete: "address-level4" %>
   </div>
 
   <div class="actions">
