HTMLのautofocus & autocompleteの値を変更

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,22 +38,22 @@
 
   <div class="field">
     <%= f.label :prefecture_code %><br />
-    <%= f.text_field :prefecture_code, autocomplete: "address-level1" %>
+    <%= f.text_field :prefecture_code %>
   </div>
 
   <div class="field">
     <%= f.label :city %><br />
-    <%= f.text_field :city, autocomplete: "address-level2" %>
+    <%= f.text_field :city %>
   </div>
 
   <div class="field">
     <%= f.label :street %><br />
-    <%= f.text_field :street, autocomplete: "address-level3" %>
+    <%= f.text_field :street %>
   </div>
 
   <div class="field">
     <%= f.label :other_address %><br />
-    <%= f.text_field :other_address, autocomplete: "address-level4" %>
+    <%= f.text_field :other_address %>
   </div>
 
   <div class="actions">
