--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -15,5 +15,7 @@
   <%= @report.user_id %>
 </p>
 
+<%= render 'comments/form', commentable: @report, comment: @comment %>
+
 <%= link_to 'Edit', edit_report_path(@report) %> |
 <%= link_to 'Back', reports_path %>
