--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,21 +1,21 @@
-<p id="notice"><%= notice %></p>
+<h1><%= t('views.common.title_show', name: Report.model_name.human) %></h1>
 
 <p>
-  <strong>Title:</strong>
+  <strong><%= Report.human_attribute_name(:title) %>:</strong>
   <%= @report.title %>
 </p>
 
 <p>
-  <strong>Content:</strong>
+  <strong><%= Report.human_attribute_name(:content) %>:</strong>
   <%= @report.content %>
 </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @report.user_id %>
-</p>
+<% if current_user == @report.user %>
+  <%= link_to t('views.common.edit'), edit_report_path(@report) %> |
+<% end %>
+<%= link_to t('views.common.back'), reports_path %>
 
+<%= render 'comments/comments', commentable: @report, comments: @comments %>
+
+<p><%= t('views.common.title_new', name: Comment.model_name.human) %></p>
 <%= render 'comments/form', commentable: @report, comment: @comment %>
-
-<%= link_to 'Edit', edit_report_path(@report) %> |
-<%= link_to 'Back', reports_path %>
