unlessをifへ変更 + viewで呼べるメソッドをビューから呼ぶように変更

--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,4 +1,4 @@
-<% unless user == current_user %>
+<% if current_user != user %> <!--自分自身はフォローできないようにする。自分自身の場合は、フォームは表示されない-->
   <div>
     <% if current_user.following?(user) %>
       <%= form_with(model: [user, following_user], method: :delete, local: true) do |f| %>
