コメントの送信ボタンの名前を変更

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -15,5 +15,5 @@
   <% end %>
 
   <%= f.text_field :content, required: true %>
-  <%= f.submit t('.create') %>
+  <%= f.submit t('.submit') %>
 <% end %>
