--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -15,10 +15,9 @@
       <td><%= report.title %></td>
       <td><%= report.content %></td>
       <td><%= link_to t('views.common.show'), report %></td>
-      <% if current_user == report.user %>
-        <td><%= link_to t('views.common.edit'), edit_report_path(report) %></td>
-        <td><%= link_to t('views.common.destroy'), report, method: :delete, data: { confirm: t('views.common.delete_confirm') } %></td>
-      <% end %>
+      <% editable = report.editable?(current_user) %>
+      <td><%= link_to(t('views.common.edit'), edit_report_path(report)) if editable %></td>
+      <td><%= link_to(t('views.common.destroy'), report, method: :delete, data: { confirm: t('views.common.delete_confirm') }) if editable %></td>
     </tr>
   <% end %>
   </tbody>
