--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -15,7 +15,7 @@
 <% end %>
 <%= link_to t('views.common.back'), reports_path %>
 
-<%= render 'comments/comments', commentable: @report, comments: @comments %>
+<%= render 'comments/comments', commentable: @report %>
 
 <p><%= t('views.common.title_new', name: Comment.model_name.human) %></p>
-<%= render 'comments/form', commentable: @report, comment: @comment %>
+<%= render 'comments/form', commentable: @report, comment: @report.comments.new %>
