--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,5 +1,5 @@
 <h2><%= Comment.model_name.human %></h2>
-<% if commentable.comments.any? %>
+<% if commentable.comments.exists? %>
   <ul>
     <% commentable.comments.preload(:user).order(:id).each do |comment| %>
       <li>
