--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -6,8 +6,8 @@
         <p><%= t('activerecord.attributes.comment.content') %> : <%= comment.content %></p>
         <p><%= link_to comment.user.name_or_email, comment.user %> : <%= l comment.created_at, format: :short %></p>
         <% if current_user == comment.user %>
-          <%= link_to t('views.common.edit'), edit_polymorphic_path([commentable, comment]) %> |
-          <%= link_to t('views.common.destroy'), polymorphic_path([commentable, comment]), method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
+          <%= link_to t('views.common.edit'), [:edit, commentable, comment] %> |
+          <%= link_to t('views.common.destroy'), [commentable, comment], method: :delete, data: { confirm: t('views.common.delete_confirm') } %>
         <% end %>
       </li>
     <% end %>
